# linguistics-framework

./: .gitignore  Dockerfile  README.md  package.json  pyproject.toml
js/: api.js  controller.js  index.js
js/models/: AnkiCard.js  Verb.js
src/: api.py  aws.py  index.py  server.py
src/models/: AnkiCard.py  Verb.py  Vocab.py
src/static/: bundle.css  bundle.js
src/templates/: index.html
ui/: package.json  rollup.config.js  tailwind.config.js
ui/public/: index.html
ui/src/: App.svelte  LanguageForm.svelte  SpainFlag.svelte  constants.js
words/: irregulars.txt  phrases.txt  verbs.txt  vocabulary.txt
