[tool.poetry]
name = "linguistics-framework"
version = "0.1.0"
description = ""
authors = ["Martin McKeaveney <martin@shogunsystems.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
boto3 = "^1.17.33"
beautifulsoup4 = "^4.9.3"
Flask = "^1.1.2"
aiohttp = "^3.7.4"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
